objects/ASI_GiftBox_Good_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Order_Item_Id__c</fullName>
        <label>Order Item</label>
        <referenceTo>ASI_GiftBox_Order_Item__c</referenceTo>
        <relationshipLabel>Gift Box Good Receipts</relationshipLabel>
        <relationshipName>Gift_Box_Good_Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Receipt_Charge_Out_Price__c</fullName>
        <label>Charge Out Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Receipt_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Receipt_Receive_Date__c</fullName>
        <label>Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Receipt_Warehouse__c</fullName>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VTS</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>HN</fullName>
                </value>
                <value>
                    <fullName>DN</fullName>
                </value>
                <value>
                    <fullName>K12</fullName>
                </value>
                <value>
                    <fullName>Intransit</fullName>
                </value>
                <value>
                    <fullName>Supplier Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Gift Box Good Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Order_Item_Id__c</columns>
        <columns>ASI_GiftBox_Receipt_Receive_Date__c</columns>
        <columns>ASI_GiftBox_Receipt_Quantity__c</columns>
        <columns>ASI_GiftBox_Receipt_Charge_Out_Price__c</columns>
        <columns>ASI_GiftBox_Receipt_Warehouse__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GBGR-{0000000}</displayFormat>
        <label>Receipt Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Box Good Receipts</pluralLabel>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Good_Receipt</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Good Receipt</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_GiftBox_Rev_Item_Vertify</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_GiftBox_Receipt_Quantity__c +  ASI_GiftBox_Order_Item_Id__r.ASI_GiftBox_Order_Item_Received_Quantity__c &gt;  ASI_GiftBox_Order_Item_Id__r.ASI_GiftBox_Order_Item_Order_Quantity__c</errorConditionFormula>
        <errorMessage>Invalid Quantity. Received quantity must not excess order quantity</errorMessage>
    </validationRules>
</CustomObject>